Removes Link header and adds <link/> tag for css instead

--- a/test/http_server_spec/web/health-check.html
+++ b/test/http_server_spec/web/health-check.html
@@ -1,6 +1,12 @@
 <!doctype>
 <html lang="en-US">
   <head>
+    <!-- 
+      "...Most modern browsers will not load a CSS stylesheet when only 
+      referenced in the HTTP Link header." 
+      ref: https://http.dev/link 
+    -->
+    <link rel="stylesheet" href="layout-styles.css">
     <title>TODO List</title>
   </head>
 
