--- a/test/http_server_spec/web/health-check.html
+++ b/test/http_server_spec/web/health-check.html
@@ -2,8 +2,9 @@
 <html lang="en-US">
   <head>
     <!-- 
-      "...Most modern browsers will not load a CSS stylesheet when only 
-      referenced in the HTTP Link header." 
+      Most modern browsers will expect link tag to exist
+      and will not load a CSS stylesheet when only 
+      referenced in the HTTP Link header.
       ref: https://http.dev/link 
     -->
     <link rel="stylesheet" href="layout-styles.css">
