--- a/test/http_server_spec/web/health-check.html
+++ b/test/http_server_spec/web/health-check.html
@@ -2,9 +2,10 @@
 <html lang="en-US">
   <head>
     <!-- 
-      Most modern browsers will expect link tag to exist
-      and will not load a CSS stylesheet when only 
-      referenced in the HTTP Link header.
+      http_server_spec updated to reflect the fact that modern 
+      browsers will expect a link tag to exist in the head and 
+      will not load a CSS stylesheet when only referenced in 
+      the HTTP Link header. 
       ref: https://http.dev/link 
     -->
     <link rel="stylesheet" href="layout-styles.css">
