Updates language for conciseness in HTML comment on health-check.html
Co-authored-by: Ian Gagorik <Aoxian@users.noreply.github.com>

--- a/test/http_server_spec/web/health-check.html
+++ b/test/http_server_spec/web/health-check.html
@@ -2,11 +2,7 @@
 <html lang="en-US">
   <head>
     <!-- 
-      http_server_spec updated to reflect the fact that modern 
-      browsers will expect a link tag to exist in the head and 
-      will not load a CSS stylesheet when only referenced in 
-      the HTTP Link header. 
-      ref: https://http.dev/link 
+      http_server_spec updated, because the external link to the css is not assumed
     -->
     <link rel="stylesheet" href="layout-styles.css">
     <title>TODO List</title>
